# travis-ci-sample

./: .travis.yml  CMakeLists.txt  README.md
tests/: main.c
